Fix all module resolution, TypeScript, and Biome linting errors across the monorepo

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -19,7 +19,9 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@klayk/ui": ["../../packages/ui/src"],
+      "@klayk/ui/*": ["../../packages/ui/src/*"]
     }
   },
   "include": [
